# bampi

./: .env.example  .gitignore  .gitmodules  bot.py  docker-compose.yml  pyproject.toml
bampi/plugins/bampi_chat/: __init__.py  config.py  handler.py  prompt.py  schedule_manager.py  service_manager.py  session_manager.py  skills.py
bampi/plugins/bampi_chat/memory/: __init__.py  archiver.py  embeddings.py  manager.py  profiler.py  schema.py  search_text.py  store.py  store_parts.py  types.py  vector_index.py
bampi/plugins/bampi_chat/tools/: __init__.py  browser.py  files.py  memory.py  safe_bash.py  schedule.py  service.py  web_search.py  workspace.py
bampi/plugins/bampi_chat/tools/browser/: __init__.py  artifacts.py  bridge.py  cdp.py  commands.py  config.py  errors.py  installer.py  interaction.py  launcher.py  models.py  policy.py  recording.py  runtime.py  snapshot.py  tool.py
docker/bampi-sandbox/: Dockerfile  matplotlibrc
tests/: conftest.py  test_bampi_chat_browser_tool.py  test_bampi_chat_custom_model.py  test_bampi_chat_handler.py  test_bampi_chat_md2img.py  test_bampi_chat_memory.py  test_bampi_chat_schedule.py  test_bampi_chat_service.py  test_bampi_chat_session_manager.py  test_bampi_chat_skills.py  test_bampi_chat_tools.py
