[project]
name = "bampi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "bampy",
    "beautifulsoup4>=4.14.3",
    "camoufox>=0.4.11",
    "httpx>=0.28.1",
    "markdown>=3.10.2",
    "mdx-breakless-lists>=1.0.1",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot2[fastapi]>=2.4.4",
    "openai>=1.0",
    "playwright>=1.58.0",
    "pymdown-extensions>=10.21.2",
]

[tool.nonebot]
plugins = []
plugin_dirs = ["bampi/plugins"]

[tool.uv.workspace]
members = [
    "bampy",
]

[tool.uv.sources]
bampy = { workspace = true, editable = true }
